[gd_scene load_steps=9 format=3 uid="uid://b3cv1g0a284mq"]

[ext_resource type="Script" uid="uid://dmuuwlyuofchc" path="res://entities/ui/deck_preview/scripts/DeckPreview.gd" id="1_k0qju"]
[ext_resource type="Resource" uid="uid://jetuptwqlhnw" path="res://shared/resources/translations/assets/Yes.tres" id="2_s0fjc"]
[ext_resource type="Script" uid="uid://mt2ilttcpq4r" path="res://entities/ui/deck_preview/scripts/DeckPreviewSelection.gd" id="3_0x34l"]
[ext_resource type="Resource" uid="uid://bge0q1apngvdj" path="res://shared/resources/translations/assets/No.tres" id="3_m027l"]
[ext_resource type="StyleBox" uid="uid://d1rhal5rp1608" path="res://assets/styles/panel/MetalBox.tres" id="4_hcvyd"]
[ext_resource type="Material" uid="uid://b3sbymha1eo5s" path="res://entities/ui/deck_preview/materials/DeckPreviewSelectionMaterial.tres" id="5_g8chd"]
[ext_resource type="Resource" uid="uid://b6uuk6xw16ak4" path="res://shared/resources/colors/assets/ItemFocusColor.tres" id="6_i8t08"]
[ext_resource type="Resource" uid="uid://62hlbto7b8c6" path="res://shared/resources/colors/assets/ItemSelectionColor.tres" id="7_5qsbf"]

[node name="DeckPreview" type="MarginContainer" node_paths=PackedStringArray("deck_name", "card_count", "buildin", "texture_rect", "deck_description", "selection_button")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1482.0
offset_bottom = -597.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15
script = ExtResource("1_k0qju")
deck_name = NodePath("PanelContainer/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/DeckName")
card_count = NodePath("PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer2/GridContainer/CardCounter")
buildin = NodePath("PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer2/GridContainer/IsBuildIn")
texture_rect = NodePath("PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Control")
deck_description = NodePath("PanelContainer/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer/DeckDescription")
selection_button = NodePath("PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer2/GridContainer/Button")
yes_translation = ExtResource("2_s0fjc")
no_translation = ExtResource("3_m027l")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Control" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" node_paths=PackedStringArray("deck_preview")]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
expand_mode = 1
script = ExtResource("3_0x34l")
target_size = Vector2(250, 250)
selection_material = ExtResource("5_g8chd")
deck_preview = NodePath("../../../../../..")
color_on_focus = ExtResource("6_i8t08")
color_on_select = ExtResource("7_5qsbf")

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_styles/panel = ExtResource("4_hcvyd")

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
text = "DECK_INFO"

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer2"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "BUILT_IN"

[node name="IsBuildIn" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
bbcode_enabled = true
text = "NO"
fit_content = true

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "CARD_COUNT"

[node name="CardCounter" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
bbcode_enabled = true
fit_content = true

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer2/GridContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = ExtResource("4_hcvyd")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="DeckName" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "DECK_NAME"

[node name="DeckDescription" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
bbcode_enabled = true
text = "DESCRIPTION"
fit_content = true

[connection signal="deck_activate" from="." to="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Control" method="activate"]
[connection signal="deck_unchecked" from="." to="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Control" method="reset"]
[connection signal="mouse_entered" from="." to="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Control" method="activate"]
[connection signal="mouse_exited" from="." to="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Control" method="reset"]
[connection signal="focus_entered" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Control" to="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Control" method="activate"]
[connection signal="focus_exited" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Control" to="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Control" method="reset"]
[connection signal="focus_entered" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer2/GridContainer/Button" to="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Control" method="activate"]
[connection signal="focus_exited" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer2/GridContainer/Button" to="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/Control" method="reset"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer2/GridContainer/Button" to="." method="set_this_deck"]
